# frappe_hfhg

./: README.md  call_logs_payload.json  package.json  pyproject.toml
frappe_hfhg/: doctor_scheduler.py  firebase_utils.py  hooks.py  install.py  modules.txt  tasks.py
frappe_hfhg/api/: __init__.py  __init__.py.backup  facebook_integration.py  meta_ads.py  whatsapp.py
frappe_hfhg/frappe_hfhg/: get_test_data.py
frappe_hfhg/frappe_hfhg/dashboard_chart/consultations_by_lead_source/: consultations_by_lead_source.json
frappe_hfhg/frappe_hfhg/dashboard_chart_source/lead_source/: lead_source.js  lead_source.json  lead_source.py
frappe_hfhg/frappe_hfhg/doctype/after_insert_lead_log/: after_insert_lead_log.js  after_insert_lead_log.json  after_insert_lead_log.py  test_after_insert_lead_log.py
frappe_hfhg/frappe_hfhg/doctype/blood_test/: blood_test.js  blood_test.json  blood_test.py  test_blood_test.py
frappe_hfhg/frappe_hfhg/doctype/bulletin/: bulletin.js  bulletin.json  bulletin.py
frappe_hfhg/frappe_hfhg/doctype/call_logs/: call_logs.js  call_logs.json  call_logs.py  (+1 more)
frappe_hfhg/public/: .gitignore
frappe_hfhg/public/css/: custom.css
frappe_hfhg/public/js/: AppointmentApp.jsx  CalendarView.jsx  ConsultationApp.jsx  SurgeryApp.jsx  TreatmentApp.jsx  app_customizations.js  appointment_ui.bundle.jsx  bulletin.js  consultation_ui.bundle.jsx  patient_photo_manager.js  surgery_ui.bundle.jsx  treatment_ui.bundle.jsx
whatsapp_chat/: components.d.ts  index.html
whatsapp_chat/src/: App.vue  WhatsAppArea.vue  WhatsAppBox.vue  Whatsapp.vue  main.js  socket.js
(+268 files in other folders)
